Maintenance: tidy up IPC locks, make exclusive test timeout a bit longer (#1849)